[tool.poetry]
name = "mivolo"
version = "0.1.0"
description = "..."
authors = ["WildChlamydia x"]


[tool.poetry.dependencies]
python = ">=3.9,<3.11"
ultralytics = "8.1.42"
timm = "0.8.13.dev0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
